--- a/gzpn-spc-csl/bin/main/application.yaml
+++ b/gzpn-spc-csl/bin/main/application.yaml
@@ -6,7 +6,7 @@
     show-sql: true
     properties:
       hibernate:
-        dialect: ru.gazprom_neft.example.model.CustomPostgreDialect #org.hibernate.dialect.PostgreSQLDialect
+        dialect: ru.gzpn.spc.csl.model.PostgreDialect #org.hibernate.dialect.PostgreSQLDialect
         temp:
           use_jdbc_metadata_defaults: false
 
@@ -28,7 +28,7 @@
      
 # vaadin:
 # A ridiculously short timeout to test what happens when the session expires
- server.:
+ server:
    port: 8081
    servlet:
      session:
