The application data model has been changed.
Business model is
containing now: BaseEntity - base abstract entity with id, version and
time stamps fields; ACLBasedEntity - base abstract entity for Access
control; HProject - havy_project table; CProject - capital_project;
Phase - phase; Stage - stage; and special JSON types for access control
and phase management.

--- a/gzpn-spc-csl/build.gradle
+++ b/gzpn-spc-csl/build.gradle
@@ -56,7 +56,7 @@ dependencies {
 //	compile('com.sun.xml.bind:jaxb-impl')
 //	compile('javax.activation:activation')
 	compile("com.vaadin:vaadin-spring-boot-starter:${vaadinSpringVersion}")
-	compile("com.vaadin:vaadin-spring-boot-starter:${vaadinSpringVersion}:javadoc")
+//	compile("com.vaadin:vaadin-spring-boot-starter:${vaadinSpringVersion}:javadoc")
 	//compile("com.vaadin:vaadin-grid-flow:1.1.0")
 	compile("com.vaadin:vaadin-push")
 //	compile("com.vaadin:flow:10.0.1")
