DB Name is changed. New name is spc-csl. i.e. jdbc:postgresql://localhost:5432/spc-csl

--- a/gzpn-spc-csl/src/main/resources/application.yaml
+++ b/gzpn-spc-csl/src/main/resources/application.yaml
@@ -21,7 +21,7 @@
 
  app:
    datasource:
-     url: jdbc:postgresql://localhost:5432/activiti
+     url: jdbc:postgresql://localhost:5432/spc-csl
      removeAbandoned: true
      initialSize: 5
      maxActive: 10
