--- a/gzpn-spc-csl/build.gradle
+++ b/gzpn-spc-csl/build.gradle
@@ -7,14 +7,20 @@ buildscript {
 		mavenCentral()
 	}
 	dependencies {
+		classpath "com.devsoap.plugin:gradle-vaadin-plugin:1.3.1"
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-	}
+	}	
+}
+
+plugins {
+    id "com.devsoap.plugin.vaadin" version "1.3.1"
 }
 
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'com.devsoap.plugin.vaadin'
 
 group = 'ru.gazprom-neft'
 
@@ -33,7 +39,7 @@ repositories {
 
 
 def activitiVersion = "6.0.0"
-def	vaadinVersion = '8.5.1'//'10.0.2'//
+def	vaadinVersion = '8.5.2'//'10.0.2'//
 def vaadinSpringVersion = "3.1.0"//'10.0.2'//
 configurations.all {
     resolutionStrategy.eachDependency { DependencyResolveDetails details ->
@@ -59,6 +65,8 @@ dependencies {
 //	compile("com.vaadin:vaadin-spring-boot-starter:${vaadinSpringVersion}:javadoc")
 	//compile("com.vaadin:vaadin-grid-flow:1.1.0")
 	compile("com.vaadin:vaadin-push")
+	compile("com.vaadin:vaadin-client-compiled")
+	compile("com.vaadin:vaadin-themes")
 //	compile("com.vaadin:flow:10.0.1")
 	compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.0'
 	compile group: 'com.sun.xml.bind', name: 'jaxb-core', version: '2.3.0'
