--- a/gzpn-spc-csl/build.gradle
+++ b/gzpn-spc-csl/build.gradle
@@ -4,39 +4,42 @@ buildscript {
 		springBootVersion = '2.0.3.RELEASE'
 	}
 	repositories {
-		mavenCentral()
+			mavenCentral() 
+			maven {
+				url "https://plugins.gradle.org/m2/"
+			}
+			maven { url "http://maven.vaadin.com/vaadin-addons" }
 	}
 	dependencies {
-		classpath "com.devsoap.plugin:gradle-vaadin-plugin:1.3.1"
+		classpath "com.devsoap.plugin:gradle-vaadin-plugin:1.3.1" 
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-	}	
-}
-
-plugins {
-    id "com.devsoap.plugin.vaadin" version "1.3.1"
-}
-
+	}   
+}      
+      
+//plugins {      
+//    id "com.devsoap.plugin.vaadin" version "1.3.1" 
+//}
+apply plugin: 'com.devsoap.plugin.vaadin' 
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
-apply plugin: 'com.devsoap.plugin.vaadin'
+
 
 group = 'ru.gazprom-neft'
 
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
-targetCompatibility = 1.8
+targetCompatibility = 1.8 
 
 repositories {
-	maven{
+	maven {
 		url 'http://repo.maven.apache.org/maven2/'
 	}
 	maven { url "http://maven.vaadin.com/vaadin-addons" }
 //	url 'http://repo.maven.apache.org/'
 //	//mavenCentral()
 }
-
 
 def activitiVersion = "6.0.0"
 def	vaadinVersion = '8.5.2'//'10.0.2'//
