--- a/gzpn-spc-csl/build.gradle
+++ b/gzpn-spc-csl/build.gradle
@@ -96,7 +96,7 @@ dependencies {
 	compile group: 'org.apache.commons', name: 'commons-dbcp2', version: '2.5.0'
 
     compile("org.codehaus.groovy:groovy")
-
+	compile("org.springframework.boot:spring-boot-devtools")
 	runtime('org.postgresql:postgresql')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	//testCompile('org.springframework.security:spring-security-test')
