--- a/gzpn-spc-csl/src/main/resources/application.yaml
+++ b/gzpn-spc-csl/src/main/resources/application.yaml
@@ -1,7 +1,7 @@
  spring:
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: create-drop
     generate-ddl: true
     show-sql: true
     properties:
