--- a/gzpn-spc-csl/src/main/resources/application.yaml
+++ b/gzpn-spc-csl/src/main/resources/application.yaml
@@ -3,7 +3,7 @@
     hibernate:
       ddl-auto: create-drop
     generate-ddl: true
-    show-sql: true
+   # show-sql: true
     properties:
       hibernate:
         dialect: ru.gzpn.spc.csl.model.PostgreDialect #org.hibernate.dialect.PostgreSQLDialect
