--- a/gzpn-spc-csl/build.gradle
+++ b/gzpn-spc-csl/build.gradle
@@ -12,7 +12,7 @@ buildscript {
 			maven { url "http://maven.vaadin.com/vaadin-addons" }
 	}
 	dependencies {
-		classpath "com.devsoap.plugin:gradle-vaadin-plugin:1.3.1" 
+	//	classpath "com.devsoap.plugin:gradle-vaadin-plugin:1.3.1" 
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
 	}   
 }      
@@ -20,12 +20,11 @@ buildscript {
 //plugins {      
 //    id "com.devsoap.plugin.vaadin" version "1.3.1" 
 //}
-apply plugin: 'com.devsoap.plugin.vaadin' 
+//apply plugin: 'com.devsoap.plugin.vaadin' 
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
-
 
 group = 'ru.gazprom-neft'
 
@@ -44,8 +43,8 @@ repositories {
 
 
 def activitiVersion = "6.0.0"
-def	vaadinVersion = '8.6.1'//'10.0.2'//
-def vaadinSpringVersion = "3.1.0"//'10.0.2'//
+def	vaadinVersion = '8.6.4'//'10.0.2'//
+def vaadinSpringVersion = "3.1.1"//'10.0.2'//
 configurations.all {
     resolutionStrategy.eachDependency { DependencyResolveDetails details ->
  
