--- a/gzpn-spc-csl/build.gradle
+++ b/gzpn-spc-csl/build.gradle
@@ -100,7 +100,7 @@ dependencies {
 	// https://mvnrepository.com/artifact/org.apache.poi/poi
 	compile group: 'org.apache.poi', name: 'poi', version: '4.0.1'
 	
-    compile("org.codehaus.groovy:groovy")
+    compile("org.codehaus.groovy:groovy-all")
 	compile("org.springframework.boot:spring-boot-devtools")
 	runtime('org.postgresql:postgresql')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
